# mr-extractor

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
docs/: INDEX.md  QUICK_REF.md  ROADMAP.md
docs/01-plan/features/: ProcessPage.plan.md  project-setup.plan.md  queue-page.plan.md  setup-page.plan.md
docs/02-design/features/: ProcessPage.design.md  project-setup.design.md  queue-page.design.md  setup-page.design.md
docs/03-analysis/: project-setup.analysis.md  setup-page.analysis.md
docs/04-report/: project-setup.report.md  setup-page.report.md
docs/archive/2026-05/: _INDEX.md
docs/references/: COMMANDS.md  FILE_FORMATS.md  HISTORY.md  MODEL_SELECTOR.md  README.md  SETTINGS.md  SHORTCUTS.md  UI.md  UX_BEHAVIORS.md  WORKERS.md  file-formats.md  history-spec.md  model-selector-spec.md  player-page-spec.md  settings-spec.md  shortcuts-spec.md  ux-behaviors.md  workers-spec.md
scripts/: download-binaries.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  main.rs
src-tauri/src/commands/: common.rs  export.rs  mod.rs  model.rs  queue.rs  separate.rs  settings.rs  setup.rs  video.rs  youtube.rs
src/components/common/: Toast.svelte
src/components/queue/: DropZone.svelte  (+4 more)
src/lib/: audio.ts  commands.ts  errorMessages.ts  notify.ts  process.ts  queue.ts  settings.ts  stores.ts  types.ts
src/pages/: HistoryPage.svelte  PlayerPage.svelte  ProcessPage.svelte  QueuePage.svelte  SettingsPage.svelte  SetupPage.svelte
(+9 files in other folders)
