[package]
name = "mr-extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "mr_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset: PlayerPage가 스템 wav를 asset://로 로드 (tauri.conf.json assetProtocol)
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Design Ref: §2.3 — common.rs 의존성 (probing / disk / HTTP / async time)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
